Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57028

QTime inconsistent with MySQL Time

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.12.0 Alpha
    • 5.6.2, 5.9.4
    • SQL Support
    • None
    • ae42461f44cf63a66a087cf8c2660c3d914f474c

    Description

      Not sure why QTBUG-6 is marked out of scope. Getting the right value from the database seems within scope.

      MySQL defines a Time field as a "duration of time", NOT as "time of day".

      http://dev.mysql.com/doc/refman/5.7/en/time.html

      Qt misrepresents the actual values by parsing it into a 24 clock based type (QTime). If the value is greater than or equal to 24hrs than the QTime object is set to "00:00:00".

      If QElapsedTimer had a method to set the initial elapsed time and pause, maybe we could use that?

      Attachments

        For Gerrit Dashboard: QTBUG-57028
        # Subject Branch Project Status CR V

        Activity

          People

            andysh Andy Shaw
            dafky2000 Daniel Kelly
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes